# OpenGL-Geometry-Instancing

./: .gitignore  CMakeLists.txt  Main.cpp  Main.hpp  README.md  instancing.c  instancing.h  main.c  main.h
documentation/: report.tex
libraries/: CMakeLists.txt  GLUtilities.c  GLUtilities.h  LoadObject.c  LoadObject.h  LoadTGA.c  LoadTGA.h  VectorUtils3.c  VectorUtils3.h
shaders/: hand.vert  instancing.frag  instancing.vert  main.frag  main.vert  skybox.frag  skybox.vert  world.frag  world.vert
textures/: darkblue.tga  green.tga  red.tga  white.tga
